cmake_minimum_required(VERSION 3.23)
project(C__practices)

set(CMAKE_CXX_STANDARD 14)
add_executable(helloworld helloworld.cpp)
add_executable(cincout cincout.cpp leetcode/2stacksQueue.cpp)
add_executable(test test.cpp)
add_executable(inputManynums inputManynums.cpp)
add_executable(MinStack leetcode/MinStack.cpp)
add_executable(reversePrint leetcode/reversePrint.cpp)
add_executable(reverseList leetcode/reverseList.cpp)
add_executable(copyRandomList leetcode/copyRandomList.cpp)
add_executable(replaceSpace leetcode/replaceSpace.cpp)
add_executable(reverseLeftWords leetcode/reverseLeftWords.cpp)
add_executable(findRepeatNumber leetcode/findRepeatNumber.cpp)
add_executable(missingNumber leetcode/missingNumber.cpp)
add_executable(findNumberIn2DArray leetcode/findNumberIn2DArray.cpp)
add_executable(levelOrder leetcode/levelOrder.cpp)
add_executable(isSubStructure leetcode/isSubStructure.cpp)
add_executable(mirrorTree leetcode/mirrorTree.cpp)
add_executable(isSymmetric leetcode/isSymmetric.cpp)
add_executable(fib leetcode/fib.cpp)
add_executable(numWays leetcode/numWays.cpp)
add_executable(maxProfit leetcode/maxProfit.cpp)
add_executable(maxSubArray leetcode/maxSubArray.cpp)
add_executable(maxValue leetcode/maxValue.cpp)
add_executable(translateNum leetcode/translateNum.cpp)
add_executable(lengthOfLongestSubstring leetcode/lengthOfLongestSubstring.cpp)
add_executable(deleteNode leetcode/deleteNode.cpp)
add_executable(getKthFromEnd leetcode/getKthFromEnd.cpp)
add_executable(mergeTwoLists leetcode/mergeTwoLists.cpp)
add_executable(getIntersectionNode leetcode/getIntersectionNode.cpp)
add_executable(exchange leetcode/exchange.cpp)
add_executable(twoSum leetcode/twoSum.cpp)
add_executable(reverseWords leetcode/reverseWords.cpp)
add_executable(exist leetcode/exist.cpp)
add_executable(movingCount leetcode/movingCount.cpp)
add_executable(pathSum leetcode/pathSum.cpp)
add_executable(treeToDoublyList leetcode/treeToDoublyList.cpp)
add_executable(kthLargest leetcode/kthLargest.cpp)
add_executable(minNumber leetcode/minNumber.cpp)
add_executable(isStraight leetcode/isStraight.cpp)